[package]
name = "arduino_leds"
version = "0.1.0"
edition="2021"

[dependencies]
panic-halt = "0.2.0"
smart-leds = "0.3.0"
ws2812-spi = "0.4.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
pwm-pca9685 = "0.3.1"
infrared = "0.14.1"

[dependencies.arduino-hal]
git = "https://github.com/Rahix/avr-hal"
rev = "533159f"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"